# ChangeLog for media-sound/soundconverter
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-sound/soundconverter/ChangeLog,v 1.38 2015/02/12 11:19:04 pacho Exp $

*soundconverter-2.1.5 (12 Feb 2015)

  12 Feb 2015; Pacho Ramos <pacho@gentoo.org> +soundconverter-2.1.5.ebuild:
  Version bump

*soundconverter-2.1.4 (03 Feb 2015)

  03 Feb 2015; Pacho Ramos <pacho@gentoo.org> +soundconverter-2.1.4.ebuild,
  -soundconverter-2.0.4.ebuild:
  Version bump, drop old

  23 Jul 2014; Agostino Sarubbo <ago@gentoo.org> soundconverter-2.1.3.ebuild:
  Stable for x86, wrt bug #512012

  22 Jul 2014; Agostino Sarubbo <ago@gentoo.org> soundconverter-2.1.3.ebuild:
  Stable for amd64, wrt bug #512912

*soundconverter-2.1.3 (20 May 2014)

  20 May 2014; Pacho Ramos <pacho@gentoo.org> +soundconverter-2.1.3.ebuild,
  -soundconverter-1.5.4.ebuild, -soundconverter-2.0.1.ebuild,
  -soundconverter-2.0.3.ebuild:
  Version bump, migrate to new python eclasses (#486962 by hasufell), drop old.

  25 Feb 2013; Agostino Sarubbo <ago@gentoo.org> soundconverter-2.0.4.ebuild:
  Stable for x86, wrt bug #457404

  21 Feb 2013; Chema Alonso <nimiux@gentoo.org> soundconverter-2.0.4.ebuild:
  Stable for amd64 wrt bug #457404

*soundconverter-2.0.4 (10 Jan 2013)

  10 Jan 2013; Hanno Boeck <hanno@gentoo.org> +soundconverter-2.0.4.ebuild,
  metadata.xml:
  Bump, adds opus support.

  17 Oct 2012; <ago@gentoo.org> soundconverter-2.0.3.ebuild:
  Stable for amd64, wrt bug #433317

  17 Oct 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  soundconverter-2.0.3.ebuild:
  x86 stable wrt bug #433317

*soundconverter-2.0.3 (06 Jul 2012)

  06 Jul 2012; Hanno Boeck <hanno@gentoo.org> +soundconverter-2.0.3.ebuild:
  Version bump.

  05 May 2012; Michał Górny <mgorny@gentoo.org> soundconverter-1.5.4.ebuild,
  soundconverter-2.0.1.ebuild:
  dev-util/pkgconfig -> virtual/pkgconfig

  05 Feb 2012; Mike Gilbert <floppym@gentoo.org> soundconverter-2.0.1.ebuild: