@@ -2,7 +2,6 @@
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
 <herd>gstreamer</herd>
-<maintainer><email>hanno@gentoo.org</email></maintainer>
 <use>
 <flag name='opus'>Enable Opus audio codec support</flag>
 </use>
