@@ -1,13 +1,0 @@
-DEFINED_PHASES=compile configure install postinst postrm preinst prepare setup test unpack
-DEPEND=>=kde-base/kdelibs-4.10:4[aqua=,semantic-desktop?] kde? ( >=kde-base/kactivities-4.10:4[aqua=] ) opera? ( app-crypt/qca:2[qt4(+)] dev-libs/qoauth ) semantic-desktop? ( >=kde-base/nepomuk-core-4.10:4[aqua=] dev-libs/soprano ) >=sys-apps/sed-4 sys-devel/make >=dev-util/cmake-2.8.12 userland_GNU? ( >=sys-apps/findutils-4.4.0 ) dev-util/automoc virtual/pkgconfig !aqua? ( >=x11-libs/libXtst-1.1.0 x11-proto/xf86vidmodeproto ) handbook? ( app-text/docbook-xml-dtd:4.2 app-text/docbook-xsl-stylesheets ) dev-lang/perl >=dev-qt/qt3support-4.8.5:4[accessibility] >=dev-qt/qtcore-4.8.5:4[qt3support,ssl] >=dev-qt/qtdbus-4.8.5:4 >=dev-qt/designer-4.8.5:4[-phonon] >=dev-qt/qtgui-4.8.5:4[accessibility,dbus(+)] >=dev-qt/qtscript-4.8.5:4 >=dev-qt/qtsql-4.8.5:4[qt3support] >=dev-qt/qtsvg-4.8.5:4 >=dev-qt/qttest-4.8.5:4 >=dev-qt/qtwebkit-4.8.5:4 >=kde-base/kdelibs-4.10:4[aqua=]
-DESCRIPTION=A browser based on qtwebkit
-EAPI=5
-HOMEPAGE=http://rekonq.kde.org/
-IUSE=debug kde opera semantic-desktop linguas_cs linguas_da linguas_de linguas_el linguas_es linguas_et linguas_eu linguas_fi linguas_fr linguas_gl linguas_hu linguas_ia linguas_it linguas_km linguas_lt linguas_mr linguas_nb linguas_nl linguas_pl linguas_pt linguas_pt_BR linguas_sk linguas_sl linguas_sr linguas_sr@ijekavian linguas_sr@ijekavianlatin linguas_sr@latin linguas_sv linguas_tr linguas_uk linguas_zh_CN linguas_zh_TW +handbook aqua
-KEYWORDS=amd64 x86
-LICENSE=GPL-3
-RDEPEND=>=kde-base/kdelibs-4.10:4[aqua=,semantic-desktop?] kde? ( >=kde-base/kactivities-4.10:4[aqua=] ) opera? ( app-crypt/qca:2[qt4(+)] dev-libs/qoauth ) semantic-desktop? ( >=kde-base/nepomuk-core-4.10:4[aqua=] dev-libs/soprano ) >=kde-base/keditbookmarks-4.10:4[aqua=] || ( kde-apps/oxygen-icons >=kde-base/oxygen-icons-4.10:4[aqua=] ) linguas_cs? ( || ( kde-apps/kde-l10n[linguas_cs(+)] >=kde-base/kde-l10n-4.10:4[aqua=,linguas_cs(+)] ) ) linguas_da? ( || ( kde-apps/kde-l10n[linguas_da(+)] >=kde-base/kde-l10n-4.10:4[aqua=,linguas_da(+)] ) ) linguas_de? ( || ( kde-apps/kde-l10n[linguas_de(+)] >=kde-base/kde-l10n-4.10:4[aqua=,linguas_de(+)] ) ) linguas_el? ( || ( kde-apps/kde-l10n[linguas_el(+)] >=kde-base/kde-l10n-4.10:4[aqua=,linguas_el(+)] ) ) linguas_es? ( || ( kde-apps/kde-l10n[linguas_es(+)] >=kde-base/kde-l10n-4.10:4[aqua=,linguas_es(+)] ) ) linguas_et? ( || ( kde-apps/kde-l10n[linguas_et(+)] >=kde-base/kde-l10n-4.10:4[aqua=,linguas_et(+)] ) ) linguas_eu? ( || ( kde-apps/kde-l10n[linguas_eu(+)] >=kde-base/kde-l10n-4.10:4[aqua=,linguas_eu(+)] ) ) linguas_fi? ( || ( kde-apps/kde-l10n[linguas_fi(+)] >=kde-base/kde-l10n-4.10:4[aqua=,linguas_fi(+)] ) ) linguas_fr? ( || ( kde-apps/kde-l10n[linguas_fr(+)] >=kde-base/kde-l10n-4.10:4[aqua=,linguas_fr(+)] ) ) linguas_gl? ( || ( kde-apps/kde-l10n[linguas_gl(+)] >=kde-base/kde-l10n-4.10:4[aqua=,linguas_gl(+)] ) ) linguas_hu? ( || ( kde-apps/kde-l10n[linguas_hu(+)] >=kde-base/kde-l10n-4.10:4[aqua=,linguas_hu(+)] ) ) linguas_ia? ( || ( kde-apps/kde-l10n[linguas_ia(+)] >=kde-base/kde-l10n-4.10:4[aqua=,linguas_ia(+)] ) ) linguas_it? ( || ( kde-apps/kde-l10n[linguas_it(+)] >=kde-base/kde-l10n-4.10:4[aqua=,linguas_it(+)] ) ) linguas_km? ( || ( kde-apps/kde-l10n[linguas_km(+)] >=kde-base/kde-l10n-4.10:4[aqua=,linguas_km(+)] ) ) linguas_lt? ( || ( kde-apps/kde-l10n[linguas_lt(+)] >=kde-base/kde-l10n-4.10:4[aqua=,linguas_lt(+)] ) ) linguas_mr? ( || ( kde-apps/kde-l10n[linguas_mr(+)] >=kde-base/kde-l10n-4.10:4[aqua=,linguas_mr(+)] ) ) linguas_nb? ( || ( kde-apps/kde-l10n[linguas_nb(+)] >=kde-base/kde-l10n-4.10:4[aqua=,linguas_nb(+)] ) ) linguas_nl? ( || ( kde-apps/kde-l10n[linguas_nl(+)] >=kde-base/kde-l10n-4.10:4[aqua=,linguas_nl(+)] ) ) linguas_pl? ( || ( kde-apps/kde-l10n[linguas_pl(+)] >=kde-base/kde-l10n-4.10:4[aqua=,linguas_pl(+)] ) ) linguas_pt? ( || ( kde-apps/kde-l10n[linguas_pt(+)] >=kde-base/kde-l10n-4.10:4[aqua=,linguas_pt(+)] ) ) linguas_pt_BR? ( || ( kde-apps/kde-l10n[linguas_pt_BR(+)] >=kde-base/kde-l10n-4.10:4[aqua=,linguas_pt_BR(+)] ) ) linguas_sk? ( || ( kde-apps/kde-l10n[linguas_sk(+)] >=kde-base/kde-l10n-4.10:4[aqua=,linguas_sk(+)] ) ) linguas_sl? ( || ( kde-apps/kde-l10n[linguas_sl(+)] >=kde-base/kde-l10n-4.10:4[aqua=,linguas_sl(+)] ) ) linguas_sr? ( || ( kde-apps/kde-l10n[linguas_sr(+)] >=kde-base/kde-l10n-4.10:4[aqua=,linguas_sr(+)] ) ) linguas_sr@ijekavian? ( || ( kde-apps/kde-l10n[linguas_sr@ijekavian(+)] >=kde-base/kde-l10n-4.10:4[aqua=,linguas_sr@ijekavian(+)] ) ) linguas_sr@ijekavianlatin? ( || ( kde-apps/kde-l10n[linguas_sr@ijekavianlatin(+)] >=kde-base/kde-l10n-4.10:4[aqua=,linguas_sr@ijekavianlatin(+)] ) ) linguas_sr@latin? ( || ( kde-apps/kde-l10n[linguas_sr@latin(+)] >=kde-base/kde-l10n-4.10:4[aqua=,linguas_sr@latin(+)] ) ) linguas_sv? ( || ( kde-apps/kde-l10n[linguas_sv(+)] >=kde-base/kde-l10n-4.10:4[aqua=,linguas_sv(+)] ) ) linguas_tr? ( || ( kde-apps/kde-l10n[linguas_tr(+)] >=kde-base/kde-l10n-4.10:4[aqua=,linguas_tr(+)] ) ) linguas_uk? ( || ( kde-apps/kde-l10n[linguas_uk(+)] >=kde-base/kde-l10n-4.10:4[aqua=,linguas_uk(+)] ) ) linguas_zh_CN? ( || ( kde-apps/kde-l10n[linguas_zh_CN(+)] >=kde-base/kde-l10n-4.10:4[aqua=,linguas_zh_CN(+)] ) ) linguas_zh_TW? ( || ( kde-apps/kde-l10n[linguas_zh_TW(+)] >=kde-base/kde-l10n-4.10:4[aqua=,linguas_zh_TW(+)] ) ) handbook? ( >=kde-base/kdelibs-4.10:4[aqua=,handbook] ) dev-lang/perl >=dev-qt/qt3support-4.8.5:4[accessibility] >=dev-qt/qtcore-4.8.5:4[qt3support,ssl] >=dev-qt/qtdbus-4.8.5:4 >=dev-qt/designer-4.8.5:4[-phonon] >=dev-qt/qtgui-4.8.5:4[accessibility,dbus(+)] >=dev-qt/qtscript-4.8.5:4 >=dev-qt/qtsql-4.8.5:4[qt3support] >=dev-qt/qtsvg-4.8.5:4 >=dev-qt/qttest-4.8.5:4 >=dev-qt/qtwebkit-4.8.5:4 >=kde-base/kdelibs-4.10:4[aqua=]
-SLOT=4
-SRC_URI=mirror://sourceforge/rekonq/rekonq-2.4.2.tar.xz
-_eclasses_=cmake-utils	0e29eadbd656185bce30d2449ab48035	eutils	998e5931fb95b10a6a11ec796ada2759	fdo-mime	0acfe1a88fd8751a1d5dc671168219fa	flag-o-matic	c263990f1b677b0f0be0a3299f179762	gnome2-utils	5cdfd22a2163c9d3a891648bd19453a7	kde4-base	deaaf624bd641762a3432753e86f1a6a	kde4-functions	0fefdf727b8cb916a1b974021316f911	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	0dfbfa13f57c6184f4728d12ac002aac	versionator	cd0bcdb170807e4a1984115e9d53a26f	virtualx	73cfc129b4b9ba23aed1abb10c825d86
-_md5_=f4777996846a6037d2954d6799ec8e44
