@@ -3,23 +3,22 @@ Hash: SHA256
 
 DIST rekonq-2.4.2.tar.xz 5161348 SHA256 e9805b32f592ca5809bd1632c624c57fc0109ce98b73a8b8e3ebd04e9c875126 SHA512 55594dac99b06db7986198f1b6e8efdb0770e2219a33d34db7919d4d0d741ef026b0e12d284ae9b2e1a9b6e40efcdf4f0870e9b0819bff14f45162c5b464ba78 WHIRLPOOL 9e555f5ad935bd2e73ef62e6ccc8f634d3dedf219a5f1ef7a2c356123b0d56d47e2a177cabfb0803ca7f48ebef60a72e34801aa6c9904891630f7b47af08b2ba
 EBUILD rekonq-2.4.2-r1.ebuild 1252 SHA256 34acc82f43ac2c6cd42fdba37ff65e4184914207c3a96b583fc1be4c5445daa6 SHA512 5aca9d85097fa28be5b153d7664104788d66b46c81e65814ff270b9add51a8409e2f73bc52871150303651691bb5716f7931327a7cb6c1e72f50483937eaa2fd WHIRLPOOL 3e0ecc6aab0326de12d06c95322fc78ce097ca405e9b840cfcb21f3d2c325c76d6cbe54ebed9c75e7ed3d8e4e3b197a300afeb1fc8824f6b26dbcae23b4eac74
-EBUILD rekonq-2.4.2.ebuild 1563 SHA256 ed40e15bd7f8828da6aebd38b711659885264b315e98b78e74638ead626b73c6 SHA512 6448d379c39b86d8ac490e30ee7713be8acf0f26e51a034befb865c8723197d7236b3a66288833aba64fb96bcc5a43aa1589c4a548f28c5abdcbb00418c1c7f9 WHIRLPOOL 4480c95cbdc5aab30df4e316192add29f8716670c23a0c380449b1fd7621744d6b756353823156cd3f457fe51b372777c1bb8f4e758502a0ce5b02f53c930327
-MISC ChangeLog 12034 SHA256 e8980c646edf8efc72b164bd8da86045a0fca1055560d96e5db9bf5bdaab1f4c SHA512 fb3363089943d4e243a42b94dd18e9fa5c8acf33ba549c5df893363a96e6c30523a8ca8fc062bfe7318eadb75030a334118cb6176a0afd40a83d8686c3113ba5 WHIRLPOOL 4b48f830e79f8b4906e374e141bd2a1047932d54331d2a745562d5473a24aae10d9ba1d65dd5fd7725d3b212b2c0d7d0281962cfb8f8e33c4fc2520e3b2ddcd1
+MISC ChangeLog 12120 SHA256 3db04ce51392a69037f257def21397fd1bfd32d40e4ace525225d71042c653cb SHA512 6b45c463e2f39c41d9a8d4017846f80fb956d1837c245f5fd01d4d9d88494b19f1a7b75661c92a21f4bb7d58d72668985f551256aca16fb5040f45b5242ea397 WHIRLPOOL c8364a095482d6bf71477fe55d96a744ac78a4469f1324e4ea2f02cae0eff9280fa6304e42a0fb3006b0fa2cc0367b3177fe71c3d9c14501a228cdb11817ff25
 MISC metadata.xml 320 SHA256 2d02df8ad61da5bb6cf1b5b578966a8a6a9918f5f1db8d96a33353caa1a22be8 SHA512 0c2f9f3e9224bacb92435d469c2aac4dca97804d9c63966249b108fd02f13547ffbe17fdf97d4fbb39050a2b12ae69345aff66bbbe5a4fa724c5d06d967dec8b WHIRLPOOL d31c371fc9d587334d52ad44e0792e10618d7183f956ce3f7e16616e32020aab3b73f1018009d89970ef5052a756748935ef9f1f2fd898a0abb976da5c451388
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJU3131AAoJELp701BxlEWfhxMP/RE/7pSN05OAH0BgR+HNRKW0
-jZsHcM6Qt4KkCDyK/PujMrs/JOxatAbq3OH6kKB96rM8SxjrZ/iiGpB/PvBAoAMA
-yth0E1jq0kV9rN35Q0Ue1QzWbAaCJUmcojPTrKbWS8gkmta4Bz6o79pb/96yVER6
-DJ7D/s6Uojq3BUsN/Yoj1rmqlzysQFGPtDJXRlb2p0ujvghGEkReQEmnA/VJOu22
-3q5tC5DUhgmruIgBUMo8DNxvzkf/nETG57Q1zFpg9Hym/R1wAuPQSrdqJcVlQk9w
-yC6yX5T1VNEbrBXYIo60DbhghOdnkXV8jmiyXyFO+bcV4e/PYXUQKAUNpZKIWe5o
-OaRdp+5bKYN3PEHCl6rIh2g4Vtmza6YsE7W64nqBdyW/0mu+rb5KHQQFDo6cMASt
-dmcYSOmk2sLgBu8oNGqHzEICzIdu8oNREUxKSPlrXJosVDlIV/pv63A+zz5vV+2m
-uGtBgIxdLUxIHDCnbMhK5tv+mtkPuMPG91oCMJUqF88l9RQSwUcpRCda88VLyo7M
-eaarXee4hRnFEgEJxl+Go+0UqapOQcD36xen0u/7DVCt9gzYgU3p4m+myuUZn0x4
-RgLe+GktPM5vJiMSxHP7e4It4QG0qChEg+Kb4TbbV6cGxn4/YvLtztZGoH6z5WFu
-1DGo7kxqpkadVcAMzjEP
-=zNLK
+iQIcBAEBCAAGBQJU33/DAAoJEGVpnaTzz9K9e7UP/03rhvsPSnTd9WpKx71vC++F
+6y06MAnX278m+Jb8O8N6wfdZez9wV2DLnWWPXyHinDykyecc1AxVCev63qvhzNKL
+TXAhqo26GXv2KEE7ejaHnKQCCKa6mDp6mxNUyErv7T+1tXu081ao0Y2YsZfox+WK
+lE/VcsKsUtqjgmYtl8yowU4BtuFO/qfVHifRcEHmHJ55raLJ46E9/8BXX9oIsg64
+JXAZs8hIZCJKdsKPWqzKaEQEpAwuUKrNYlKQdkGGZQsIwDaiZ6PLoJSWB8H3xmMU
+F+VXHYN3JwHJuNS5UtVHWbx/ffUztvcZyc8Gjuijecri94fM0AHeD08dFmPRmDYT
+Kdg3RhBXIq9f993KB16HLK1glqLkIws7RQ4rtNM8n+xq/4MxsErVpWez49SbuAdh
+fj7if1Fp0GCrOvHFNKL9pupp2fq3QuxmvMRLpyhDPO52C7ItbKFxPLcKi8GgTFCm
+gI5UJ2SABNFHWyEzyNJ2m29OZstXKY4ISPUfolPUTKYzkwmYaY6YXIhUV4NETN1A
+CRMOqVFpXNDaBLVeeCyD4gx0oU0Yd7/UdW7WRuerLYWiewHIjM4ef7NeR1atPo03
+erHOykdEkRzOM/rwfxaEEqvYjn96ziVZ7EP1tDoKBG34soTS3AaOtphDQma2OaqU
+Z5cBD7HZxA62g/QCEY6s
+=49SI
 -----END PGP SIGNATURE-----
